--- a/templates/modify_student_details.html
+++ b/templates/modify_student_details.html
@@ -30,11 +30,7 @@
     </div>
   </header>
 
-<body>
-  Welcome to the Student page 
-
-</body>
-
+Please edit carefully!!!
 
 <form action="">
   <label for="Stname">Student Name:</label>
