insertion page working

--- a/templates/Student.html
+++ b/templates/Student.html
@@ -37,7 +37,7 @@
 
 
 <form action="">
-  <label for="Stname">Student Name:</label>
+  <label for="Stname">Student_Name:</label>
   <input type="text" id="stname" name="stname"><br>
   <label for="age">Student age:</label>
   <input type="text" id="age" name="age"><br>
