--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
 
 <button
   class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
-  <a href="{{ url_for('Student')}}">Student
+  <a href="{{ url_for('post_student_details')}}">post_student_details
     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
       class="w-4 h-4 ml-1" viewBox="0 0 14 24">
 
