--- a/templates/post_student_details.html
+++ b/templates/post_student_details.html
@@ -30,17 +30,42 @@
     </div>
   </header>
 
-here you can View the student record!!!
-<!--
-<form action="">
-  <label for="Stname">Student Name:</label>
-  <input type="text" id="stname" name="stname"><br>
+<body>
+  Welcome to the Student page 
 
-  <br>
-  <input type ="submit" value="Submit">
+</body>
+    <hr>
+    <div class="content">
+    <form method="post">
+        <p>
+            <b><label for="content">Todo content</label></b>
+        </p>
+        <p>
+            <input type="text" name="content"
+                placeholder=" Content"></input>
+        </p>
 
+        <p>
+            <b><label for="degree">Degree</label></b>
+        </p>
+        
+        <p>
+            <input id="degree-0" name="degree" required type="radio" value="Important">
+            <label for="degree-0">Important</label>
+        </p>
+        <p>
+            <input id="degree-1" name="degree" required type="radio" value="Unimportant">
+            <label for="degree-1">Unimportant</label>
+        </p> 
+        <button type="submit">Submit</button>
+    </form>
+    <hr>
+    {% for todo in todos %}
+        <div class="todo">
+            <p>{{ todo['content'] }} <i>({{ todo['degree']}})</i></p>
+        </div>
+    {% endfor %}
 
-</form>
-
--->
+    </div>
+</body>
 </html>
