green button on submit

--- a/templates/delete_student_details.html
+++ b/templates/delete_student_details.html
@@ -30,7 +30,7 @@
     </div>
   </header>
 
-here you can delete the student record!!!
+here you can delete the!!!
 
 <form action="">
   <label for="Stname">Student Name:</label>
