--- a/templates/Student.html
+++ b/templates/Student.html
@@ -31,8 +31,8 @@
   </header>
 
 <body>
-  Welcome to the Student page 
-
+ <marquee>Welcome to the Student page 
+</marquee> 
 </body>
 
 
@@ -42,7 +42,16 @@
   <label for="age">Student age:</label>
   <input type="text" id="age" name="age"><br>
   <label for="course">Course Name:</label>
-  <input type="text" id="course" name="course"><br>
+  <Select id="course" name="course">
+  <option type ="BCA">BCA</option>
+  <option type ="MCA">MCA</option>
+  <Option value ="BBA">BBA</Option>
+  <option type ="MBA">MBA</option>
+  <option type ="B.Tech">B.Tech</option>
+  <option type ="M.Tech">M.Tech</option>
+  <option type ="B.Sc">B.Sc</option>
+</Select>
+ <br>
   <label for="email">Email ID:</label>
   <input type="text" id="email" name="email"><br>
   <br>
